InternexDev_Sandbox/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Type__c</fullName>
        <label>Notification Type</label>
        <picklist>
            <picklistValues>
                <fullName>Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portal_External_ID__c</fullName>
        <label>Portal External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__Activity_Category__c</fullName>
        <description>Categorizing activities like Contact, Collections...</description>
        <label>Activity Category</label>
        <picklist>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>akritiv__Auto_Dunning_Error__c</fullName>
        <description>Auto Dunning Error</description>
        <label>Auto Dunning Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__Close__c</fullName>
        <formula>HYPERLINK( &apos; /&apos;+Id+&apos;/e?close=1&apos; , &apos;X&apos; , &apos;_self&apos;)</formula>
        <label>Close</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__Contact_Level__c</fullName>
        <description>Object Level From where the contact has been made.</description>
        <label>Contact Level</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transaction</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>akritiv__Contact_Method__c</fullName>
        <label>Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>akritiv__Contact_Type__c</fullName>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promise To Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>akritiv__Dunning_Error_Fix_URL__c</fullName>
        <description>Dunning Error Fix URL</description>
        <label>Dunning Error Fix URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>akritiv__Dunning_Status__c</fullName>
        <label>Dunning Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>akritiv__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>akritiv__Rating__c</fullName>
        <description>This will be used by users to provide rating with each activity performed on an account</description>
        <label>Collection Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Great</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>akritiv__MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>akritiv__TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>akritiv__UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>